--- a/nsd/04matrix/code/Makefile
+++ b/nsd/04matrix/code/Makefile
@@ -2,19 +2,18 @@ FLAGS ?=
 
 UNAME_S := $(shell uname -s)
 
+CXXFLAGS += -std=c++17 -O3 -g -m64 ${FLAGS}
+
 ifeq ($(UNAME_S),Darwin)
 MKLROOT ?= /opt/intel/mkl
 MKLINC ?= ${MKLROOT}/include
 MKLLIB ?= ${MKLROOT}/lib
 MKLEXT ?= a
-CXXFLAGS :=
-endif
-
-ifeq ($(UNAME_S),Linux)
+else ifeq ($(UNAME_S),Linux)
 MKLINC ?= /usr/include/mkl
 MKLLIB ?= /usr/lib/x86_64-linux-gnu
 MKLEXT ?= so
-CXXFLAGS := -Wl,--no-as-needed
+CXXFLAGS += -Wl,--no-as-needed
 endif
 
 MKLLINKLINE := \
@@ -24,19 +23,28 @@ MKLLINKLINE := \
 	-lpthread -lm -ldl
 
 CXX = g++
-CXXFLAGS := ${CXXFLAGS} \
-	-std=c++17 -O3 -g -m64 \
-	-I${MKLINC} \
-	${MKLLINKLINE} \
-	${FLAGS}
 
-BINS := \
-	01_pod_vector 02_pod_matrix_auto 03_pod_matrix_rowmajor 04_pod_matrix_colmajor \
-	05_matrix_class 06_matrix_vector 07_matrix_matrix \
-	08_gesv 09_geev 10_syev 11_gesvd 12_gels
+# Array.
+PODBINS := pod01_vector pod02_matrix_auto pod03_matrix_rowmajor pod04_matrix_colmajor
+BINS += $(PODBINS)
+# Matrix class.
+MABINS := ma01_matrix_class ma02_matrix_vector ma03_matrix_matrix
+BINS += $(MABINS)
+# Linear algebra.
+LABINS := la01_gesv la02_geev la03_syev la04_gesvd la05_gels
+BINS += $(LABINS)
 
 .PHONY: default
 default: ${BINS}
+
+.PHONY: runpod
+runpod: $(patsubst %,run_%,$(PODBINS))
+
+.PHONY: runma
+runma: $(patsubst %,run_%,$(MABINS))
+
+.PHONY: runla
+runla: $(patsubst %,run_%,$(LABINS))
 
 .PHONY: runall
 runall: $(patsubst %,run_%,$(BINS))
@@ -45,8 +53,14 @@ runall: $(patsubst %,run_%,$(BINS))
 run_%: %
 	./$<
 
-%: %.cpp Makefile
-	${CXX} ${CXXFLAGS} -o $@ $<
+pod%: pod%.cpp Makefile
+	${CXX} $< -o $@ ${CXXFLAGS}
+
+ma%: ma%.cpp Makefile
+	${CXX} $< -o $@ ${CXXFLAGS}
+
+la%: la%.cpp Makefile
+	${CXX} $< -o $@ ${CXXFLAGS} -I${MKLINC} ${MKLLINKLINE}
 
 .PHONY: clean
 clean:
