--- a/nsd/04matrix/code/.gitignore
+++ b/nsd/04matrix/code/.gitignore
@@ -1,15 +1,15 @@
-01_pod_vector
-02_pod_matrix_auto
+pod01_vector
+pod02_matrix_auto
 pod_bad_matrix
-03_pod_matrix_rowmajor
-04_pod_matrix_colmajor
-05_matrix_class
-06_matrix_vector
-07_matrix_matrix
-08_gesv
-09_geev
-10_syev
-11_gesvd
-12_gels
+pod03_matrix_rowmajor
+pod04_matrix_colmajor
+ma01_matrix_class
+ma02_matrix_vector
+ma03_matrix_matrix
+la01_gesv
+la02_geev
+la03_syev
+la04_gesvd
+la05_gels
 *.o
 *.dSYM/
