--- a/nsd/05cache/code/Makefile
+++ b/nsd/05cache/code/Makefile
@@ -2,19 +2,18 @@ FLAGS ?=
 
 UNAME_S := $(shell uname -s)
 
+CXXFLAGS += -std=c++17 -O3 -g -m64 ${FLAGS}
+
 ifeq ($(UNAME_S),Darwin)
 MKLROOT ?= /opt/intel/mkl
 MKLINC ?= ${MKLROOT}/include
 MKLLIB ?= ${MKLROOT}/lib
 MKLEXT ?= a
-CXXFLAGS :=
-endif
-
-ifeq ($(UNAME_S),Linux)
+else ifeq ($(UNAME_S),Linux)
 MKLINC ?= /usr/include/mkl
 MKLLIB ?= /usr/lib/x86_64-linux-gnu
 MKLEXT ?= so
-CXXFLAGS := -Wl,--no-as-needed
+CXXFLAGS += -Wl,--no-as-needed
 endif
 
 MKLLINKLINE := \
@@ -24,11 +23,6 @@ MKLLINKLINE := \
 	-lpthread -lm -ldl
 
 CXX = g++
-CXXFLAGS := ${CXXFLAGS} \
-	-std=c++17 -O3 -g -m64 \
-	-I${MKLINC} \
-	${MKLLINKLINE} \
-	${FLAGS}
 
 BINS := 01_skip_access 02_locality 03_matrix_matrix
 
@@ -42,8 +36,11 @@ runall: $(patsubst %,run_%,$(BINS))
 run_%: %
 	./$<
 
+03_matrix_matrix: 03_matrix_matrix.cpp StopWatch.hpp Makefile
+	${CXX} $< -o $@ ${CXXFLAGS} -I${MKLINC} ${MKLLINKLINE}
+
 %: %.cpp StopWatch.hpp Makefile
-	${CXX} ${CXXFLAGS} -o $@ $<
+	${CXX} $< -o $@ ${CXXFLAGS}
 
 .PHONY: clean
 clean:
