[nsd][11arraydesign] Add content and code for Array Code in C++

--- a/.github/workflows/nsd.yml
+++ b/.github/workflows/nsd.yml
@@ -19,6 +19,7 @@ jobs:
       MEMROOT: nsd/07mem/code
       SMARTROOT: nsd/08smart/code
       MODERNCPPROOT: nsd/09moderncpp/code
+      ARRAYDESIGNROOT: nsd/11arraydesign/code
 
     strategy:
         matrix:
@@ -184,3 +185,13 @@ jobs:
         make -C ${{ env.MODERNCPPROOT }}/04_template runall
         make -C ${{ env.MODERNCPPROOT }}/05_lambda clean
         make -C ${{ env.MODERNCPPROOT }}/05_lambda runall
+
+    - name: 11arraydesign_solve_cpp
+      run: |
+        make -C ${{ env.ARRAYDESIGNROOT }} solve_cpp.so
+
+    - name: 11arraydesign_data_prep
+      # macos does not have MKL.
+      if: startsWith(matrix.os, 'ubuntu')
+      run: |
+        make -C ${{ env.ARRAYDESIGNROOT }} data_prep.so
