[nsd][ci] Add cron schedule and branch limit for PR runs for nsd

--- a/.github/workflows/nsd.yml
+++ b/.github/workflows/nsd.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - '**/nsd**'
   pull_request:
+    branches:
+      - '**/nsd**'
+      - 'master'
+  schedule:
+    - cron: '02 18 * * *'
 
 jobs:
   build:
