[nsd][09moderncpp] Add 02_stored_demangle

--- a/nsd/09moderncpp/code/05_lambda/Makefile
+++ b/nsd/09moderncpp/code/05_lambda/Makefile
@@ -5,7 +5,7 @@ OPT ?= -O3
 CXX = g++
 CXXFLAGS += -std=c++17 -g $(OPT) $(FLAGS)
 
-BINS := 01_lambda 02_stored 03_closure
+BINS := 01_lambda 02_stored 02_stored_demangle 03_closure
 
 .PHONY: default
 default: $(BINS)
