[nsd] Make MKL optional because apple silicon does not have it
On macos, use Accelerate / vecLib for lapack.  Note that the clapack interface does not support row majoring.

--- a/nsd/04matrix/code/Makefile
+++ b/nsd/04matrix/code/Makefile
@@ -3,24 +3,26 @@ FLAGS ?=
 UNAME_S := $(shell uname -s)
 
 CXXFLAGS += -std=c++17 -O3 -g -m64 ${FLAGS}
+INC ?=
 
 ifeq ($(UNAME_S),Darwin)
-MKLROOT ?= /opt/intel/mkl
-MKLINC ?= ${MKLROOT}/include
-MKLLIB ?= ${MKLROOT}/lib
-MKLEXT ?= a
+# Do not define "HASMKL" macro.
+INC += -I/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A/Headers
+LINKFLAGS := -framework Accelerate
 else ifeq ($(UNAME_S),Linux)
-MKLINC ?= /usr/include/mkl
+INC += -I/usr/include/mkl
+
+CXXFLAGS += -DHASMKL -Wl,--no-as-needed
+
 MKLLIB ?= /usr/lib/x86_64-linux-gnu
 MKLEXT ?= so
-CXXFLAGS += -Wl,--no-as-needed
-endif
 
-MKLLINKLINE := \
+LINKFLAGS := \
 	${MKLLIB}/libmkl_intel_lp64.${MKLEXT} \
 	${MKLLIB}/libmkl_sequential.${MKLEXT} \
 	${MKLLIB}/libmkl_core.${MKLEXT} \
 	-lpthread -lm -ldl
+endif
 
 CXX = g++
 
@@ -60,7 +62,7 @@ ma%: ma%.cpp Makefile
 	${CXX} $< -o $@ ${CXXFLAGS}
 
 la%: la%.cpp Makefile
-	${CXX} $< -o $@ ${CXXFLAGS} -I${MKLINC} ${MKLLINKLINE}
+	${CXX} $< -o $@ ${CXXFLAGS} ${INC} ${LINKFLAGS}
 
 .PHONY: clean
 clean:
