CI Ubuntu upgrade from 20.04 to 22.04 and disable macos
Avoid rm *

--- a/writing/2021/pyboost11/code/Makefile
+++ b/writing/2021/pyboost11/code/Makefile
@@ -35,4 +35,4 @@ test: modpyb$(pyextsuffix) modbpy$(pyextsuffix)
 
 .PHONY: clean
 clean:
-	rm -rf __pycache__ *.pyc *.pyo build *$(pyextsuffix)
+	rm -rf __pycache__ *.pyc *.pyo build *.so *.dylib
