--- a/.github/workflows/writing.yml
+++ b/.github/workflows/writing.yml
@@ -22,7 +22,7 @@ jobs:
 
     strategy:
         matrix:
-          os: [ubuntu-20.04, macos-10.15]
+          os: [ubuntu-22.04]
 
         fail-fast: false
 
