--- a/.github/workflows/nsd.yml
+++ b/.github/workflows/nsd.yml
@@ -202,7 +202,7 @@ jobs:
     - name: 11arraydesign_solve_cpp
       run: |
         make -C ${{ env.ARRAYDESIGNROOT }} solve_cpp.so
-        make -C ${{ env.ARRAYDESIGNROOT }} solve_cpp_simplearray.so
+        make -C ${{ env.ARRAYDESIGNROOT }} solve_cpp_xarray.so
 
     - name: 11arraydesign_data_prep
       # macos does not have MKL.
