--- a/nsd/11arraydesign/code/Makefile
+++ b/nsd/11arraydesign/code/Makefile
@@ -3,22 +3,26 @@ export PYTHONPATH=modmesh-master
 UNAME_S := $(shell uname -s)
 
 ifeq ($(UNAME_S),Darwin)
-MKLROOT ?= /opt/intel/mkl
-MKLINC ?= ${MKLROOT}/include
-MKLLIB ?= ${MKLROOT}/lib
-MKLEXT ?= a
+# Do not define "HASMKL" macro.
+INC += -I/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A/Headers
+LINKFLAGS := -framework Accelerate
 else ifeq ($(UNAME_S),Linux)
-MKLINC ?= /usr/include/mkl
+CXXFLAGS += -DHASMKL -Wl,--no-as-needed
+ifeq (${MKLROOT},)
+INC += -I/usr/include/mkl
 MKLLIB ?= /usr/lib/x86_64-linux-gnu
-MKLEXT ?= so
-CXXFLAGS += -Wl,--no-as-needed
+else
+INC += -I${MKLROOT}/include
+MKLLIB ?= ${MKLROOT}/lib/intel64
 endif
+MKLEXT ?= so
 
-MKLLINKLINE := \
+LINKFLAGS := \
 	${MKLLIB}/libmkl_intel_lp64.${MKLEXT} \
 	${MKLLIB}/libmkl_sequential.${MKLEXT} \
 	${MKLLIB}/libmkl_core.${MKLEXT} \
 	-lpthread -lm -ldl
+endif
 
 PYTHON ?= $(shell which python3)
 PYTHON_VERSION ?= $(shell $(PYTHON) -c 'import sys; print("%d.%d" % (sys.version_info.major, sys.version_info.minor))')
@@ -28,15 +32,11 @@ NUMPY_INC := $(shell python3 -c 'import numpy ; print(numpy.get_include())')
 MODMESH_ROOT=modmesh_copy
 MODMESH_PYMOD=$(MODMESH_ROOT)/modmesh/buffer/pymod
 
-INC := -I$(shell python3-config --prefix)/include -I$(MODMESH_ROOT)
+INC += -I$(shell python3-config --prefix)/include -I$(MODMESH_ROOT)
 
 PYTHON_LIB := $(shell python3-config --prefix)/lib
 
 CPATH := $(PYTHON_INC):$(NUMPY_INC)
-
-ifdef YHROOT
-CPATH := $(CPATH):$(YHROOT)/usr/$(YHFLAVOR)/include
-endif
 
 export CPATH
 
@@ -64,8 +64,11 @@ testimport: libst
 
 #cpp -v /dev/null -o /dev/null
 
-data_prep.so: data_prep.cpp Makefile
-	g++ $< -o $@ -O3 -fPIC -shared -std=c++17 -lpython$(PYTHON_VERSION) -L$(PYTHON_LIB) ${INC} -I${MKLINC} ${MKLLINKLINE}
+data_prep.o: data_prep.cpp Makefile
+	g++ -c $< -o $@ ${CXXFLAGS} -O3 -fPIC -std=c++17 ${INC}
+
+data_prep.so: data_prep.o wrap_SimpleArray.o wrap_ConcreteBuffer.o buffer_pymod.o Makefile
+	g++ $< wrap_ConcreteBuffer.o wrap_SimpleArray.o buffer_pymod.o -o $@ -shared -std=c++17 -lpython$(PYTHON_VERSION) -L$(PYTHON_LIB) ${LINKFLAGS}
 
 solve_cpp_xarray.so: solve_cpp_xarray.cpp Makefile
 	g++ $< -o $@ -O3 -fPIC -shared -std=c++17 -lpython$(PYTHON_VERSION) -L$(PYTHON_LIB) ${INC}
@@ -80,7 +83,7 @@ solve_cpp.o: solve_cpp.cpp Makefile
 	g++ -c $< -o $@ -O3 -fPIC -std=c++17 ${INC}
 
 solve_cpp.so: solve_cpp.o wrap_SimpleArray.o wrap_ConcreteBuffer.o buffer_pymod.o Makefile
-	g++ solve_cpp.o wrap_ConcreteBuffer.o wrap_SimpleArray.o buffer_pymod.o -o $@ -shared -std=c++17 -lpython$(PYTHON_VERSION) -L$(PYTHON_LIB)
+	g++ $< wrap_ConcreteBuffer.o wrap_SimpleArray.o buffer_pymod.o -o $@ -shared -std=c++17 -lpython$(PYTHON_VERSION) -L$(PYTHON_LIB)
 
 ../image/03_solve_cpp.png: 03_solve_cpp.py solve_cpp.so
 	./$<
