--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -9,8 +9,14 @@ version: 2
 sphinx:
    configuration: conf.py
 
+# Set the version of Python and other tools you might need
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
+
 # Optionally set the version of Python and requirements required to build your docs
 python:
-   version: 3.7
+#   version: 3.11
    install:
    - requirements: requirements.txt
