Keep pygments version

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ pillow
 #sphinx-rtd-theme==1.0.0
 # To workaround 2.12 linenos issue in sphinx:
 # https://github.com/pygments/pygments/issues/632
-#pygments==2.11.2
+pygments==2.11.2
 furo
 docutils
