Remove the limitation to use Python 3.11 in nsd build on macos13

--- a/.github/workflows/nsd.yml
+++ b/.github/workflows/nsd.yml
@@ -55,8 +55,8 @@ jobs:
       run: |
         # brew update  # No update because it is slow
         # Force using python 3.11 from homebrew
-        brew unlink python
-        brew link --force --overwrite python@3.11
+        #brew unlink python
+        #brew link --force --overwrite python@3.11
         brew install make cmake llvm libomp radare2
 
     - name: pip (ubuntu)
